[package]
name = "radiation-counter-api"
version = "0.1.0"
authors = ["BH Cho <byunghoon.cho@gmail.com>, XL Bai <xbai9225@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
bincode = "1.0"
failure = "0.1.2"
i2c-rs = { git = "ssh://git@github.com/Cube-OS/i2c-rs.git" }
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git"}